--- a/lab01/index.html
+++ b/lab01/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Title</title>
 </head>
 <body>
@@ -39,7 +40,7 @@
 </div>
 <div id="aboutus">
     <h3>About us</h3>
-    <p>
+    <p class="large-font">
         We are a <b>company that values and celebrates the environment</b>, <u>ensures our clients receive the best</u>
         care
         and attention
@@ -49,7 +50,7 @@
         for
         our staff.
     </p>
-    <p>
+    <p class="middle-font">
         We're <em>ethically, socially, ecologically</em> and environmentally founded <strong>Tour Company</strong>. <br>We
         maintain the highest standards
         in
@@ -59,7 +60,7 @@
         standard of Kilimanjaro trekking and expedition so
         travelers can experience a trip of a lifetime.
     </p>
-    <p>
+    <p id="small-font">
         Mount Kilimanjaro can be climbed all year round. Generally, the main tourist seasons are from mid-June to
         October,
         then from December to February via <abbr title="Dalsey, Hillblom and Lynn">DHL</abbr>.<br> These months coincide
@@ -176,11 +177,11 @@
             <legend>Заповніть форму нижче</legend>
             <label>
                 Ім'я
-                <input type="text" name="first_name" placeholder="Ім'я" maxlength="15">
+                <input type="text" name="first_name" placeholder="Ім'я" maxlength="15" autofocus tabindex="0">
             </label>
             <label>
                 Прізвище
-                <input type="text" name="last_name" placeholder="Прізвище" maxlength="25">
+                <input type="text" name="last_name" placeholder="Прізвище" maxlength="25" tabindex="1" required>
             </label>
             <label>
                 По-батькові
@@ -194,7 +195,7 @@
             <p>Тип запиту</p>
             <label>
                 технічна підтримка
-                <input type="radio" name="request_type" value="tech-support" checked>
+                <input type="radio" name="request_type" value="tech-support" checked tabindex="3">
             </label>
             <label>
                 підтримка користувача
@@ -214,7 +215,7 @@
             </label>
             <label>
                 Текст запиту
-                <textarea name="request-text" cols="30" rows="10" placeholder="Текст запиту"></textarea>
+                <textarea name="request-text" cols="30" rows="10" placeholder="Текст запиту" tabindex="2"></textarea>
             </label>
             <label>
                 Дата запиту
@@ -228,6 +229,25 @@
                 Стаж користувача
                 <input type="number" name="user-experience" placeholder="Стаж користувача" min="0" max="50">
             </label>
+            <label>
+                Країна
+                <input type="text" name="country" pattern="[A-Za-z]{3}">
+            </label>
+            <label>
+                Email
+                <input type="email" name="email">
+            </label>
+            <label>
+                Пріоритетність запиту
+                <input type="color" name="priority" value="#00ff00">
+            </label>
+            <label>
+                Веб-сторінка
+                <input type="url" name="web-page">
+            </label>
+            <div>
+                <p contenteditable="true">Абзац тексту, який можна редагувати</p>
+            </div>
             <input type="submit" value="Надіслати запит">
         </fieldset>
     </form>
@@ -242,6 +262,19 @@
         </p>
     </details>
     <a href="mailto:goliathusua@gmail.com">Електронна пошта</a>
+</div>
+<div>
+    <canvas id="canvas" width="500" height="300" border="1px"></canvas>
+</div>
+<div>
+    <audio controls>
+        <source src="files/audio.mp3" type="audio/mp3">
+    </audio>
+</div>
+<div>
+    <video controls>
+        <source src="files/video.mp4" type="audio/mp3">
+    </video>
 </div>
 </body>
 </html>
