--- a/lab01/index.html
+++ b/lab01/index.html
@@ -1,10 +1,15 @@
+<!--Define document type: HTML5-->
 <!DOCTYPE html>
+<!--HTML root element-->
 <html lang="en">
+<!--Container for page metadata-->
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Travel agency</title>
 </head>
+<!--Main part of page-->
 <body>
+<!--Company  main info-->
 <div id="main">
     <h1>Travel agency</h1>
     <img src="images/logo.jpeg" alt="Travel agency company logo" width="225" height="225">
@@ -17,18 +22,22 @@
         Alicia Keys
     </blockquote>
 </div>
-<nav>
-    <ul>
-        <li><a href="#aboutus">Про нас</a></li>
-        <li><a href="#organy">Контролюючі органи</a></li>
-        <li><a href="#documents">Установчі документи</a></li>
-        <li><a href="#poslugy">Послуги</a></li>
-        <li><a href="#zamovnyky">Наші замовники</a></li>
-        <li><a href="#poslugyDet">Послуги (детально)</a></li>
-        <li><a href="#finance">Фінансові показники</a></li>
-        <li><a href="#contacts">Контакти</a></li>
-    </ul>
-</nav>
+<!--Navigation menu-->
+<div>
+    <nav>
+        <ul>
+            <li><a href="#aboutus">Про нас</a></li>
+            <li><a href="#organy">Контролюючі органи</a></li>
+            <li><a href="#documents">Установчі документи</a></li>
+            <li><a href="#poslugy">Послуги</a></li>
+            <li><a href="#zamovnyky">Наші замовники</a></li>
+            <li><a href="#poslugyDet">Послуги (детально)</a></li>
+            <li><a href="#finance">Фінансові показники</a></li>
+            <li><a href="#contacts">Контакти</a></li>
+        </ul>
+    </nav>
+</div>
+<!--Iframe part with diagram-->
 <div>
     <iframe src="https://www.epam-group.ru/"></iframe>
     <figure>
@@ -37,6 +46,7 @@
         <figcaption>Діаграма</figcaption>
     </figure>
 </div>
+<!--About us section-->
 <div id="aboutus">
     <h3>About us</h3>
     <p>
@@ -66,18 +76,21 @@
         with the dry season in Tanzania.
     </p>
 </div>
+<!--Control affairs-->
 <div id="organy">
     <h3>Контролюючі органи</h3>
     <a href="https://rada.gov.ua/">Парламент</a>
     <a href="https://www.president.gov.ua/">Президент</a>
     <a href="https://www.kmu.gov.ua/">Кабінет Міністрів</a>
 </div>
+<!--Documents section-->
 <div id="documents">
     <h3>Установчі документи</h3>
     <a href="files/statut.txt">Статут</a>
     <a href="files/dogovir.txt">Договір</a>
     <a href="files/sertifikat.txt">Сертифікат</a>
 </div>
+<!--Open hours section-->
 <div>
     <p>We open
         <time>10:00</time>
@@ -86,6 +99,7 @@
         everyday.
     </p>
 </div>
+<!--Our Services section-->
 <div id="poslugy">
     <h3>Послуги</h3>
     <ul>
@@ -95,6 +109,7 @@
         <li>Подорож в Умань</li>
     </ul>
 </div>
+<!--Our clients section-->
 <div id="zamovnyky">
     <h3>Наші замовники</h3>
     <ol>
@@ -104,6 +119,7 @@
         <li>British airlines</li>
     </ol>
 </div>
+<!--Services with detailed information section-->
 <div id="poslugyDet">
     <h3>Послуги (детально)</h3>
     <dl>
@@ -117,16 +133,17 @@
         <dd>Подорож в Умань кожен день</dd>
     </dl>
 </div>
+<!--Financial section-->
 <div id="finance">
     <h3>Фінансові показники</h3>
     <table width="500" border="1">
         <caption>Таблиця з фінансовими показниками</caption>
         <thead>
         <tr>
-            <th colspan="2">Місяць</th>
-            <th colspan="2">Доходи</th>
-            <th colspan="2">Витрати</th>
-            <th colspan="2">Прибуток</th>
+            <th colspan="1">Місяць</th>
+            <th colspan="1">Доходи</th>
+            <th colspan="1">Витрати</th>
+            <th colspan="1">Прибуток</th>
         </tr>
         </thead>
         <tbody>
@@ -169,6 +186,7 @@
         </tbody>
     </table>
 </div>
+<!--Contact section-->
 <div id="contacts">
     <h3>Контакти</h3>
     <form accept-charset="UTF-8">
