--- a/lab01/index.html
+++ b/lab01/index.html
@@ -42,10 +42,10 @@
 </div>
 <!--Iframe part with diagram-->
 <div>
-    <iframe src="https://www.epam-group.ru/"></iframe>
+    <iframe src="https://www.epam-group.ru/" width="600"></iframe>
+    <p>Не підтримка Вашим браузером елементів HTML5</p>
     <figure>
         <img src="images/diagram.png" alt="The Pulpit Rock" width="487" height="490">
-        <p>Не підтримка Вашим браузером елементів HTML5</p>
         <figcaption>Діаграма</figcaption>
     </figure>
 </div>
@@ -185,6 +185,10 @@
             <td>140000</td>
             <td>30000</td>
             <td>110000</td>
+        </tr>
+        <tr>
+            <td colspan="3">Итог</td>
+            <td>1000000</td>
         </tr>
         </tbody>
     </table>
