--- a/lab01/index.html
+++ b/lab01/index.html
@@ -65,7 +65,7 @@
     <div class="col-2">
         <!--Iframe part with diagram-->
         <div>
-            <iframe src="https://www.epam-group.ru/" width="600"></iframe>
+            <iframe src="https://www.epam-group.ru/" width="100%" style="max-width: 600px"></iframe>
             <p>Не підтримка Вашим браузером елементів HTML5</p>
             <figure>
                 <img src="images/diagram.png" alt="The Pulpit Rock" width="487" height="490">
@@ -597,6 +597,44 @@
             form, accompanied by English versions from the 1914 translation by H. Rackham.
         </p>
     </div>
+</div>
+<div class=>
+    <div class="div-class-0"></div>
+    <div class="div-class-1"></div>
+    <div class="div-class-2"></div>
+    <div class="div-class-3"></div>
+</div>
+<div class="section gallery">
+    <div class="gallery__image">
+        <h4 class="gallery__image__title">Dog 1</h4>
+        <p class="gallery__image__text">
+            In mollis faucibus arcu non dictum. Phasellus mattis rhoncus ipsum eu posuere. Pellentesque dapibus metus
+            eget orci interdum mattis vitae et metus. Fusce in ex at felis bibendum porttitor vel ut tortor. In placerat
+            arcu erat, sit amet pharetra ipsum ultrices at. Nulla at tincidunt nisl, in luctus orci. Nam felis tellus,
+            ultricies malesuada magna sed, tempus aliquam turpis.
+        </p>
+    </div>
+    <div class="gallery__image">
+        <h4 class="gallery__image__title">DOg 2</h4>
+        <p class="gallery__image__text">
+            In mollis faucibus arcu non dictum. Phasellus mattis rhoncus ipsum eu posuere. Pellentesque dapibus metus
+            eget orci interdum mattis vitae et metus. Fusce in ex at felis bibendum porttitor vel ut tortor. In placerat
+            arcu erat, sit amet pharetra ipsum ultrices at. Nulla at tincidunt nisl, in luctus orci. Nam felis tellus,
+            ultricies malesuada magna sed, tempus aliquam turpis.
+        </p>
+    </div>
+    <div class="gallery__image">
+        <h4 class="gallery__image__title">Dogge 3</h4>
+        <p class="gallery__image__text">
+            In mollis faucibus arcu non dictum. Phasellus mattis rhoncus ipsum eu posuere. Pellentesque dapibus metus
+            eget orci interdum mattis vitae et metus. Fusce in ex at felis bibendum porttitor vel ut tortor. In placerat
+            arcu erat, sit amet pharetra ipsum ultrices at. Nulla at tincidunt nisl, in luctus orci. Nam felis tellus,
+            ultricies malesuada magna sed, tempus aliquam turpis.
+        </p>
+    </div>
+    <div class="gallery__image"></div>
+    <div class="gallery__image"></div>
+    <div class="gallery__image"></div>
 </div>
 <!--Contact section-->
 <div id="contacts">
